@@ -127,7 +127,6 @@ allow_dirty_match = .*[.]PL
 perl = 5.010
 Mojolicious = 7.15 ; First version with Mojo::File
 Mojolicious::Plugin::OpenAPI = 1.22
-Module::Runtime = 0
 Sys::Hostname = 0
 File::Spec::Functions = 0
 FindBin = 0
